fixed problem with z-index, now trying to do itemGenerator

--- a/panel.Board/boardStyle.css
+++ b/panel.Board/boardStyle.css
@@ -23,5 +23,5 @@
   width: 1100px;
   height:550px;
 
-  overflow:auto;
+  overflow:hidden;
 }
