--- a/panel.Option/optionsStyle.css
+++ b/panel.Option/optionsStyle.css
@@ -1,7 +1,7 @@
 #optionsToggleButton{
   position: relative;
   left: 1080px;
-  top: -300px;
+  top: 50px;
 
   width : 70px;
   height: 70px;
